# upcxx

./: .gitignore  Bootstrap.sh  CMakeLists.txt  COPYRIGHT.txt  INSTALL  INSTALL.txt  LICENSE.txt  Makefile  Makefile.am  README  README.md  README.txt  configure.ac  cross-configure-crayxe-linux  cross-configure-intel-mic  doxygen_cfg  upcxx.mak  upcxx_config.h.in
cmake/: FindFFTW.cmake  FindGASNET.cmake  FindUPCXX.cmake
docs/latex_style/: degas_latex_header  doxygen.sty  styleSheetFile
examples/: CMakeLists.txt  Makefile.am
examples/LULESH-2.0/: CMakeLists.txt  Makefile  Makefile_cray.mak  README-upcxx.txt  lulesh-comm-upcxx.cc  lulesh-init.cc  lulesh-util.cc  lulesh.cc  lulesh.h
examples/SFMT/: test-std-M19937
examples/axpy/: CMakeLists.txt  Makefile  axpy.cpp
examples/basic/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  hello.cpp  test_acc_async.cpp  test_active_message.cpp  test_am_bcast.cpp  test_array.cpp  test_array_dist.cpp  test_array_ghost_copy.cpp  test_array_plan.cpp  test_asymmetric_partition.cpp  test_async.cpp  test_async2.cpp  test_async_am.cpp  test_copy_and_set.cpp  test_copy_and_signal.cpp  test_copy_closure.cpp  test_dynamic_finish.cpp  test_event.cpp  test_event2.cpp  test_fetch_add.cpp  test_finish.cpp  test_future.cpp  test_global_ptr.cpp  test_lock.cpp  test_memberof.cpp  test_memberof2.cpp  test_memberof3.cpp  test_process_shared_mem.cpp  test_process_shared_mem2.cpp  test_progress_thread.cpp  test_ptr_to_shared.cpp  test_reduce.cpp  test_remote_inc.cpp  test_safe_broadcast.cpp  test_shared_array.cpp  test_shared_array2.cpp  test_shared_var.cpp  (+2 more)
examples/cg/: CG.h  CGDriver.cpp  CGDriver.h  LocalSparseMat.cpp  LocalSparseMat.h  Makefile.am  MatGen.cpp  MatGen.h  README  Random.cpp  Random.h  Reduce.h  SparseMat.cpp  SparseMat.h  Team.cpp  Team.h  Timer.h  Util.cpp  Util.h  Vector.cpp  Vector.h  globals.h
examples/fft2d/: CMakeLists.txt  Makefile  fft2d.cpp  myfft.h  myfft_fftw3.c
examples/ft/: FT.cpp  FT.h  FTDriver.cpp  FTDriver.h  FTInt.cpp  Makefile  Random.cpp  Random.h  Test.cpp  Test.h  globals.h  profiling.h
examples/gas/: Amr.cpp  Amr.h  AmrLevel.cpp  AmrLevel.h  BoxArray.cpp  BoxArray.h  FluxRegister.cpp  FluxRegister.h  GridGenerator.cpp  GridGenerator.h  HSCLLevel.cpp  HSCLLevel.h  InitialPatch.h  LevelArray.h  LevelGodunov.cpp  LevelGodunov.h  LevequeCorrection.cpp  LevequeCorrection.h  LoadBalance.cpp  LoadBalance.h  Logger.cpp  Logger.h  MeshRefine.cpp  MeshRefine.h  MeshRefineD.cpp  MeshRefineD.h  MyInputStream.cpp  MyInputStream.h  PWLFillPatch.cpp  PWLFillPatch.h  ParmParse.cpp  ParmParse.h  ParmParseEntry.h  ParmParseFileTokenizer.h  ParmParseStringTokenizer.h  ParmParseTokenizer.cpp  ParmParseTokenizer.h  PhysBC.h  Quantities.cpp  Quantities.h  (+12 more)
examples/gsrb/: Makefile.am  README  amr_level.cpp  amr_level.h  amr_test.cpp  amr_test.h  boxedlist.h  execution_log.cpp  globals.h  my_math.h
examples/gups/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  gups.cpp
examples/knapsack/: Makefile.am  globals.h  knap.cpp
examples/matrixmul/: Makefile  lapack_api.h  matmul.cpp  matrix.h  verify.cpp
examples/mg/: Grid.cpp  Grid.h  MG.cpp  MG.h  MGDriver.cpp  MGDriver.h  Makefile.am  Test.cpp  Test.h  broadcast.h  constants.h  globals.h  profiling.h
examples/minimum_degree/: Makefile  mdo_upcxx.cpp
examples/pps/: Makefile.am  README  charge.h  execution_log.h  globals.h  id_test.cc  list.h  location.h  my_box.h  my_math.cpp  my_math.h  nodal_infdmn.cpp  nodal_infdmn.h  nodal_multigrid.cpp  nodal_multigrid.h  plot.h  pmg.cpp  pmg.h  pmg_test.cpp  pmg_test.h  test_file  useful_array.h
examples/pps/logging/: Barrier.pm  Barriers.pm  Described.pm  Event.pm  Events.pm  Happening.pm  Phase.pm  Phases.pm  PostScript.pm  Span.pm  Spans.pm  epilogue.ps  generate  prologue.ps  view.ps
examples/samplesort/: Makefile  Makefile.am  sample_sort.cpp
examples/spmv/: Makefile.am  spmv.cpp
examples/stencil/: Makefile.am  globals.h  stencil.cpp  stencil_mpi.cpp  stencil_simplified.cpp
include/: CMakeLists.txt  Makefile.am  active_coll.h  allocate.h  array.h  array_bulk.h  array_bulk_internal.h  array_defs.h  async.h  async_copy.h  async_impl.h  async_impl_templates1.h  async_impl_templates2.h  async_impl_templates2.h.pump  async_templates.h  async_templates.h.pump  atomic.h  broadcast.h  coll_flags.h  collective.h  dl_malloc.h  event.h  finish.h  forkjoin.h  future.h  gasnet_api.h  global_ptr.h  global_ref.h  interfaces.h  interfaces_internal.h  lock.h  machine.h  matrix.h  ptr_to_shared.h  queue.h  range.h  reduce.h  ref_to_shared.h  shared_array.h  shared_var.h  (+8 more)
include/dmapp_channel/: dmapp_helper.h
include/upcxx/: active_coll.h  active_message.h  allocate.h  array_bulk.h  array_bulk_internal.h  async.h  async_copy.h  async_impl.h  async_impl_templates1.h.pump  async_templates.h  async_templates.h.pump  atomic.h  broadcast.h  collective.h  event.h  forkjoin.h  future.h  gasnet_api.h  global_ptr.h  global_ref.h  group.h  interfaces.h  interfaces_internal.h  lock.h  progress_thread.h  queue.h  range.h  reduce.h  shared_array.h  shared_var.h  team.h  upcxx.h  upcxx_internal.h  upcxx_runtime.h  upcxx_types.h  utils.h
m4/: ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_11.m4
make_rules/: carver-gnu.mak  clang-macos.mak  cray.mak  ibm-bgq.mak  icc-linux.mak  icc-mic.mak
scripts/: install_upcxx.py  set_upcxx_vars.py  upc++.in
scripts/install/: install_upcxx_bgq.sh  install_upcxx_cori.sh  install_upcxx_edison.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  active_coll.cpp  active_message.cpp  allocate.cpp  array_bulk.c  array_bulk.cpp  async.cpp  async_copy.cpp  barrier.cpp  collective.cpp  dl_malloc.c  domain.cpp  event.cpp  global_ptr.cpp  lock.cpp  machine.cpp  progress_thread.cpp  ptr_to_shared.cpp  team.cpp  upcxx_runtime.cpp
src/dmapp_channel/: dmapp_helper.cpp
tests/: Makefile.am
