install (FILES
  active_coll.h
  allocate.h
  async.h
  async_templates.h
  collective.h
  dl_malloc.h
  event.h
  forkjoin.h
  future.h
  gasnet_api.h
  group.h
  lapack_api.h
  lock.h
  machine.h
  matrix.h
  ptr_to_shared.h
  queue.h
  range.h
  ref_to_shared.h
  shared_array.h
  shared_var.h
  team.h
  upcxx.h
  upcxx_internal.h
  upcxx_runtime.h
  upcxx_types.h
 DESTINATION include)
