include_HEADERS =  \
  active_coll.h \
  allocate.h \
  async.h \
  async_copy.h \
  async_templates.h \
  collective.h \
  dl_malloc.h \
  event.h \
  finish.h \
  forkjoin.h \
  future.h \
  gasnet_api.h \
  group.h \
  lock.h \
  global_ptr.h \
  queue.h \
  range.h \
  global_ref.h \
  shared_array.h \
  shared_var.h \
  team.h \
  upcxx.h \
  upcxx_runtime.h \
  upcxx_types.h \
  upcxx.mak

noinst_HEADERS = \
  upcxx_internal.h 